# dispatch-seven

./: .env.example  .gitignore  .no-delete  AGENTS.md  CLAUDE.md  README.md  aca.md  app.py  common.py  common.py.bak  dispatch_watchdog.sh  make_handoff_pdf.py  netlify.toml  package.json  promptfoo.config.yaml  railway.toml  requirements.txt  run_cloud.py  run_selfhosted.py  sessions.db  sessions.db-journal  setup.py  ui.py  ui.py.bak  vercel.json  worker_selfhosted.py
.claude/: plugins.json
.github/workflows/: aca-deploy.yml  ci.yml  deploy-aca.yml  deploy.yml  eval.yml  railway.yml
agents/: build.ts  comms.ts  discovery.ts  execute.ts  finance.ts  legal.ts  memory.ts  monitor.ts  orchestrator.ts  qa.ts  research.ts  scheduler.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  capacitor.config.ts  package.json
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: index.ts
evals/: README.md  build.yaml  legal.yaml  orchestrator.yaml
extracts/2026-06-29/: MANIFEST.json  MASTER.md  QA_REPORT.md  SECRETS_ROTATION_CHECKLIST.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/api/: schedule.js
frontend/public/: manifest.json  sw.js
frontend/scripts/: gen-icons.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: init-supabase.sql  setup-keyvault.sh
scripts/migrations/: 009-job-sessions.sql  (+2 more)
static/: index.html
(+103 files in other folders)
