[package]
name = "dispatch-seven"
version = "1.0.0"
description = "Dispatch Seven — AI dispatch platform desktop wrapper"
authors = ["D7 Team"]
license = "MIT"
repository = "https://github.com/alanredmond23-bit/dispatch-seven"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
